--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,99 +1,73 @@
 {
-    "Succesfully created.": "",
     "Succesfully updated.": "",
-    "Succesfully deleted.": "",
     "İstifadəçi adı ve ya şifre yanlışdır.": "",
+    "Succesfully created.": "",
+    "Succesfully deleted.": "",
     "Successfully created.": "",
     "Successfully updated.": "",
-    "Successfully deleted.": "dej",
+    "Successfully deleted.": "",
     "Email Verified Success": "",
     "Email Verified Error": "",
     "Your email already Verified": "",
+    "Thank you! We will contact you": "",
     "Title (ZH)": "",
     "cannot be empty!": "",
     "must be made of letters and numbers only!": "",
     "must be a maximum of 255 characters!": "",
-    "Title (EN)": "",
-    "Title (RU)": "",
-    "Content (ZH)": "",
-    "Content (EN)": "",
-    "Content (RU)": "",
+    "Long description (ZH)": "",
     "Short description (ZH)": "",
+    "Title (EN)": "",
+    "Long description (EN)": "",
     "Short description (EN)": "",
+    "Title (RU)": "",
+    "Long description (RU)": "",
     "Short description (RU)": "",
-    "Type": "",
-    "Sort": "",
-    "must be made of number only!": "",
     "Image": "",
     "format is not correct!": "",
-    "File": "",
     "Username": "",
     "Password": "",
     "Username or Password": "",
+    "Full name (ZH)": "",
+    "Description (ZH)": "",
+    "Full name (EN)": "",
+    "Description (EN)": "",
+    "Full name (RU)": "",
+    "Description (RU)": "",
+    "Status": "",
+    "must be made of number only!": "",
+    "Sort": "",
+    "Name": "",
+    "Phone": "",
+    "E-mail": "",
+    "Message": "",
+    "Content (ZH)": "",
+    "Content (EN)": "",
+    "Content (RU)": "",
+    "must be made of numbers only!": "",
     "Name (ZH)": "",
     "Name (EN)": "",
     "Name (RU)": "",
-    "Short Content (ZH)": "",
-    "Short Content (EN)": "",
-    "Short Content (RU)": "",
-    "Long Content (ZH)": "",
-    "Long Content (EN)": "",
-    "Long Content (RU)": "",
-    "Length (ZH)": "",
-    "must be made of numbers only!": "",
-    "Length (EN)": "",
-    "Main Image": "",
-    "Country (ZH)": "",
-    "Country (EN)": "",
-    "Country (RU)": "",
-    "Address (ZH)": "",
-    "Address (EN)": "",
-    "Address (RU)": "",
-    "E-mail": "",
-    "Phone": "",
-    "Fax": "",
-    "Fullname (ZH)": "",
-    "Fullname (EN)": "",
-    "Fullname (RU)": "",
-    "Position (ZH)": "",
-    "Position (EN)": "",
-    "Position (RU)": "",
-    "Profile Image": "",
-    "Description (ZH)": "",
-    "Description (EN)": "",
-    "Description (RU)": "",
-    "Date (ZH)": "",
-    "Date (EN)": "",
-    "Date (RU)": "",
+    "active": "",
     "ID": "",
+    "must be made of integer only!": "",
     "Fullname": "",
-    "You cannot register with this email!": "",
-    "Role": "",
-    " cannot be empty!": "",
     "must be made of letters only!": "",
     "the format is not correct!": "",
+    "You cannot register with this email!": "",
+    "Role": "",
     "does not match": "",
     "must be a maximum of 15 characters!": "",
     "must be a minimum of 6 characters!": "",
-    "Video": "",
-    "Short Description (ZH)": "",
-    "Short Description (EN)": "",
-    "Short Description (RU)": "",
-    "Name": "",
+    " cannot be empty!": "",
+    "Short Content (ZH)": "",
+    "Long Content (ZH)": "",
+    "Short Content (EN)": "",
+    "Long Content (EN)": "",
+    "Short Content (RU)": "",
+    "Long Content (RU)": "",
+    "Main Image": "",
     "must be a maximum of 25 characters!": "",
     "Group name": "",
-    "Slogan (ZH)": "",
-    "Slogan (EN)": "",
-    "Slogan (RU)": "",
-    "Length (RU)": "",
-    "Diameter (ZH)": "",
-    "Diameter (EN)": "",
-    "Diameter (RU)": "",
-    "Capacity (ZH)": "",
-    "Capacity (EN)": "",
-    "Capacity (RU)": "",
-    "Logo for Title": "",
-    "Status": "",
     "must be a minimum of 3 characters!": "",
     "Title": "",
     "Meta Title": "",
@@ -107,204 +81,146 @@
     "White Logo": "",
     "Black Logo": "",
     "Favicon": "",
-    "Perchange": "",
-    "Color": "",
-    "Logo": "",
-    "Link (ZH)": "",
+    "Title (CH)": "",
+    "Link (CH)": "",
+    "Content (CH)": "",
     "Link (EN)": "",
     "Link (RU)": "",
-    "Status Desktop": "",
-    "Status Mobile": "",
-    "Sort Desktop": "",
-    "Sort Mobile": "",
-    "Desktop image": "",
-    "Desktop thumbnail": "",
-    "Pipeline image": "",
-    "Mobile Image": "",
-    "Mobile thumbnail": "",
-    "Icon": "",
-    "Link for show": "",
-    "Link for redirects": "",
+    "Thumbnail": "",
+    "Position (ZH)": "",
+    "Position (EN)": "",
+    "Position (RU)": "",
     "About Us": "",
     "Update": "",
     "Create": "",
-    "Content": "",
-    "Grids": "",
-    "Grid ype": "",
-    "Choose Grid Type": "",
-    "Content with file": "",
-    "Collapse": "",
-    "Azerbaijan": "",
     "English": "",
     "Russian": "",
+    "Chinese": "",
     "Short Description": "",
-    "Content with pdf": "",
-    "Update date": "",
-    "Create date": "",
-    "Area": "",
-    "Areas": "",
-    "Name En": "",
-    "Name Ru": "",
+    "Long Description": "",
     "Login your account": "",
     "Sign in": "",
-    "Banners": "",
-    "Category": "",
-    "Career": "",
-    "People Stories": "",
-    "Vacancies": "",
-    "Short Content": "",
-    "Long Content": "",
-    "Careers": "",
-    "Files": "",
-    "Collapses": "",
+    "Comment": "",
+    "Active": "",
+    "Deactive": "",
+    "Description": "",
+    "Comments": "",
+    "Create date": "",
     "Contact": "",
+    "Azerbaijan": "",
     "Country": "",
     "Address": "",
+    "Fax": "",
     "Country icon": "",
     "Faq": "",
+    "Long Content": "",
     "Faqs": "",
     "Upload Images to": "",
+    "Equipment": "",
+    "Structure": "",
+    "Equipments": "",
+    "Filter": "",
+    "House": "",
+    "Location": "",
+    "Video Url": "",
+    "Price": "",
+    "Value": "",
+    "Houses": "",
+    "Gallery": "",
+    "Layout": "",
+    "Facade": "",
+    "Structures": "",
     "Dashboard": "",
     "User Permissions": "",
     "Moderators": "",
     "Users": "",
     "Roles": "",
     "Permissions": "",
+    "House Parameters": "",
     "Menus": "",
     "Slider": "",
-    "Pipelines": "",
-    "Operations": "",
-    "Social Investments": "",
-    "Medias": "",
-    "Contacts": "",
+    "Partner": "",
+    "Staff": "",
     "Settings": "",
     "Site Settings": "",
-    "Banner": "",
-    "Regions": "",
     "Language": "",
-    "Media Contact": "",
-    "Position": "",
-    "Media Contacts": "",
-    "Media": "",
-    "News": "",
-    "Reports": "",
-    "Useful links": "",
-    "Useful Links": "",
-    "Milestone": "",
-    "Description": "",
-    "Date": "",
-    "Milestones": "",
     "Moderator": "",
     "Repeat Password": "",
-    "Youtube Link": "",
-    "Upload Video": "",
-    "Youtube Url": "",
-    "Created Date": "",
-    "Gallery": "",
+    "Update date": "",
+    "News": "",
+    "Short Content": "",
+    "How many clicks": "",
     "Permission": "",
     "Permission name": "",
     "Group": "",
     "Guard": "",
-    "pipeline": "",
-    "Slogan": "",
-    "Length": "",
-    "Diameter": "",
-    "Capacity": "",
-    "Pipeline": "",
-    "Shareholders": "",
-    "Technical Parameters": "",
-    "Project": "",
-    "Region": "",
-    "Continue": "",
-    "Finished": "",
-    "Projects": "",
-    "Report": "",
-    "SCP project": "",
-    "SCP expansion project": "",
     "Role name": "",
     "Site settings": "",
     "Seo": "",
     "Photos": "",
     "Social": "",
+    "Other": "",
     "Site Title": "",
-    "Copyright": "",
     "Logo White": "",
     "Logo Colorful": "",
+    "Instagram": "",
     "Linkedin": "",
-    "Shareholder": "",
-    "Desktop Version": "",
-    "Mobile Version": "",
-    "Active": "",
-    "Deactive": "",
-    "Logo thumbnail": "",
-    "Pipeline Image": "",
-    "Big Image": "",
+    "Telegram": "",
+    "Whatsapp": "",
+    "Copyright": "",
+    "Mobile": "",
+    "Time": "",
+    "Type": "",
+    "Content": "",
     "Link": "",
-    "Desktop Image": "",
-    "Desktop status": "",
-    "Desktop sort": "",
-    "Mobile status": "",
-    "Mobile sort": "",
-    "Mobile type": "",
-    "Main Slide": "",
-    "Make Main Image": "",
-    "Technical Parameter": "",
-    "Select icon": "",
-    "Georgia": "",
+    "Big Image": "",
+    "Position": "",
     "Seems like you are lost...": "",
-    "Return to the\r\n                                                homepage!": "",
+    "Return to the\n                                                homepage!": "",
     "It's not you, it's us": "",
     "We are trying to fix things here! We won’t take that long!": "",
     "Return to the homepage!": "",
-    "About us": "",
-    "You can find information about our company values and policies, and more!": "",
-    "Read more": "",
-    "Download": "",
-    "You can find information about our commercial and technical operations, and more!": "",
-    "Previous": "",
-    "Next": "",
-    "Page 1 of": "",
-    "Find more": "",
-    "Filter by countries": "",
-    "All • 5": "",
-    "Azerbaijan • 3": "",
-    "Georgia • 3": "",
-    "Posted": "",
-    "Office in": "",
+    "Home": "",
+    "About": "",
+    "Contacts": "",
+    "Let’s build an awesome project together!": "",
+    "Follow us on social media": "",
+    "Any question or remarks? Get in touch with us.": "",
+    "Full name": "",
     "Email": "",
+    "Your message": "",
+    "Submit": "",
+    "See more": "",
+    "What costumers says": "",
     "Learn More": "",
-    "Media contacts": "",
-    "Social Investment": "",
-    "You can find latest news and reports about our activities, as well as media relations contact information. ": "",
-    "Contact person in": "",
-    "Copy to clipboard": "",
-    "Mobile number": "",
-    "Share:": "",
-    "More news": "",
-    "URL copied!": "",
+    "FAQ": "",
+    "House detail": "",
+    "from": "",
+    "Cost of a house in the": "",
+    "package": "",
+    "get the qoute now": "",
+    "About the project": "",
+    "RUB": "",
+    "Filters": "",
+    "Construction technology": "",
     "All": "",
-    "Forgot Password": "",
-    "Send": "",
-    "Sign In": "",
-    "Remember me": "",
-    "Forgot Password?": "",
-    "Log in": "",
-    "Sign up": "",
-    "Reset your password": "",
-    "Update Password": "",
-    "Firstname": "",
-    "Lastname": "",
-    "Middlename": "",
-    "Languages": "",
-    "Nothing selected": "",
-    "PassportSeria": "",
-    "PassportImage": "",
-    "RepeatPassword": "",
-    "PrivacyOrPolicy": "",
-    "Register": "",
-    "Sign Up": "",
-    "Turist": "",
-    "Guide": "",
+    "before": "",
+    "Clear filters": "",
+    "See all": "",
+    "Houses Description": "",
+    "Projects found": "",
+    "Similar projects": "",
+    "Catalogue": "",
+    "Blog": "",
+    "Call us": "",
+    "Follow us": "",
+    "Blogs": "",
+    "Share:": "",
+    "READ MORE": "",
+    "Related news": "",
+    "Trusted by global companies": "",
+    "Raratroyinvest is accredited as a verified hosting provider": "",
+    "Our Team": "",
     "Pagination Navigation": "",
     "Showing": "",
     "to": "",
