--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -227,5 +227,9 @@
     "of": "",
     "results": "",
     "Go to page :page": "",
-    "Sync Letters": ""
+    "Sync Letters": "",
+    "No structure found": "",
+    "No structure available": "",
+    "No filter available": "",
+    "No area filter available": ""
 }
