--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -120,7 +120,7 @@
     "Structure": "",
     "Equipments": "",
     "Filter": "",
-    "House": "",
+    "House": "Каталог домов",
     "Location": "",
     "Video Url": "",
     "Price": "",
@@ -180,9 +180,9 @@
     "It's not you, it's us": "",
     "We are trying to fix things here! We won’t take that long!": "",
     "Return to the homepage!": "",
-    "Home": "",
+    "Home": "Главный",
     "About": "",
-    "Contacts": "",
+    "Contacts": "Контакты",
     "Let’s build an awesome project together!": "",
     "Follow us on social media": "",
     "Any question or remarks? Get in touch with us.": "",
@@ -193,9 +193,9 @@
     "See more": "",
     "What costumers says": "",
     "Learn More": "",
-    "FAQ": "",
+    "FAQ": "Отзывы",
     "House detail": "",
-    "from": "",
+    "from": "Дом",
     "Cost of a house in the": "",
     "package": "",
     "get the qoute now": "",
@@ -210,7 +210,7 @@
     "Houses Description": "",
     "Projects found": "",
     "Similar projects": "",
-    "Catalogue": "",
+    "Catalogue": "Каталог домов",
     "Blog": "",
     "Call us": "",
     "Follow us": "",
