--- a/resources/lang/zh.json
+++ b/resources/lang/zh.json
@@ -231,5 +231,15 @@
     "No structure found": "",
     "No structure available": "",
     "No filter available": "",
-    "No area filter available": ""
+    "No area filter available": "",
+    "Logo White Mobile": "",
+    "Logo Colorful Mobile": "",
+    "Mortgage available": "",
+    "View in map": "",
+    "Sort by": "",
+    "Featured": "",
+    "Low to High": "",
+    "High to Low": "",
+    "Release Date": "",
+    "Avg. Rating": ""
 }
