--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -241,5 +241,7 @@
     "Low to High": "От низкой к высокой",
     "High to Low": "От высокой к низкой",
     "Release Date": "Дата выпуска",
-    "Avg. Rating": "Средний рейтинг"
+    "Avg. Rating": "Средний рейтинг",
+    "Mortgage": "Ипотека",
+    "Contact Us": "Свяжитесь с нами"
 }
