--- a/resources/lang/zh.json
+++ b/resources/lang/zh.json
@@ -241,5 +241,7 @@
     "Low to High": "",
     "High to Low": "",
     "Release Date": "",
-    "Avg. Rating": ""
+    "Avg. Rating": "",
+    "Mortgage": "",
+    "Contact Us": ""
 }
