Change Catalogue, Main , Blog, Catalogue Detail

--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -195,7 +195,7 @@
     "Learn More": "",
     "FAQ": "",
     "House detail": "",
-    "from": "",
+    "from": "от",
     "Cost of a house in the": "",
     "package": "",
     "get the qoute now": "",
@@ -204,7 +204,7 @@
     "Filters": "",
     "Construction technology": "",
     "All": "",
-    "before": "",
+    "before": "до",
     "Clear filters": "",
     "See all": "",
     "Houses Description": "",
