--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -1,5 +1,5 @@
 {
-  "Succesfully updated.": "Успешно обновлено.",
+    "Succesfully updated.": "Успешно обновлено.",
     "İstifadəçi adı ve ya şifre yanlışdır.": "Имя пользователя или пароль неверны.",
     "Succesfully created.": "Успешно создано.",
     "Succesfully deleted.": "Успешно удалено.",
@@ -184,7 +184,7 @@
     "About": "О нас",
     "Contacts": "Контакты",
     "Let’s build an awesome project together!": "Давайте создадим потрясающий проект вместе!",
-    "Follow us on social media": "Следите за нами в социальных сетях",
+    "Follow us on social media": "Следите за нами в соцсетях!",
     "Any question or remarks? Get in touch with us.": "Есть вопросы или замечания? Свяжитесь с нами.",
     "Full name": "Полное имя",
     "Email": "Электронная почта",
