--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -243,5 +243,6 @@
     "Release Date": "",
     "Avg. Rating": "",
     "Mortgage": "",
-    "Contact Us": ""
+    "Contact Us": "",
+    "Portfolio": ""
 }
