--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -243,5 +243,6 @@
     "Release Date": "Дата выпуска",
     "Avg. Rating": "Средний рейтинг",
     "Mortgage": "Ипотека",
-    "Contact Us": "Свяжитесь с нами"
+    "Contact Us": "Свяжитесь с нами",
+    "Portfolio": ""
 }
