--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -244,5 +244,11 @@
     "Avg. Rating": "Средний рейтинг",
     "Mortgage": "Ипотека",
     "Contact Us": "Свяжитесь с нами",
-    "Portfolio": ""
+    "Portfolio": "",
+    "Search filter": "",
+    "Технические характеристики": "",
+    "На страницу проекта": "",
+    "View on map": "",
+    "Фотографии и планировки дома": "",
+    "Video": ""
 }
