--- a/resources/lang/zh.json
+++ b/resources/lang/zh.json
@@ -244,5 +244,11 @@
     "Avg. Rating": "",
     "Mortgage": "",
     "Contact Us": "",
-    "Portfolio": ""
+    "Portfolio": "",
+    "Search filter": "",
+    "Технические характеристики": "",
+    "На страницу проекта": "",
+    "View on map": "",
+    "Фотографии и планировки дома": "",
+    "Video": ""
 }
