--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -250,5 +250,6 @@
     "На страницу проекта": "",
     "View on map": "",
     "Фотографии и планировки дома": "",
-    "Video": ""
+    "Video": "",
+    "Icon": ""
 }
