--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -244,11 +244,12 @@
     "Avg. Rating": "Средний рейтинг",
     "Mortgage": "Ипотека",
     "Contact Us": "Свяжитесь с нами",
-    "Portfolio": "",
-    "Search filter": "",
+    "Portfolio": "Портфолио",
+    "Search filter": "Фильтр поиска",
     "Технические характеристики": "",
     "На страницу проекта": "",
     "View on map": "",
     "Фотографии и планировки дома": "",
-    "Video": ""
+    "Video": "",
+    "Icon": ""
 }
